--- a/app/src/main/res/layout-large/app_bar_aarti.xml
+++ b/app/src/main/res/layout-large/app_bar_aarti.xml
@@ -1,8 +1,10 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primaryColor"
     android:theme="@style/MyCoustom"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
     android:elevation="4dp">
 
 </android.support.v7.widget.Toolbar>
