--- a/app/src/main/res/layout-normal/app_bar.xml
+++ b/app/src/main/res/layout-normal/app_bar.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primaryColor"
     android:theme="@style/MyCoustom"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
     android:elevation="4dp">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:text="आरती संग्रह"
         android:textStyle="bold"
