--- a/app/src/main/res/layout-xlarge/grid_item.xml
+++ b/app/src/main/res/layout-xlarge/grid_item.xml
@@ -4,6 +4,7 @@
     android:layout_marginLeft="35dp"
     android:layout_marginBottom="40dp"
     android:layout_marginRight="35dp"
+    android:gravity="center"
     android:layout_height="wrap_content">
 
     <ImageView
