--- a/app/src/main/res/layout/activity_aarti.xml
+++ b/app/src/main/res/layout/activity_aarti.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:background="@color/bgColor"
     tools:context="free.hindi.aarti.AartiActivity">
 
@@ -10,39 +9,37 @@
         android:id="@+id/app_bar_aarti"
         layout="@layout/app_bar_aarti" />
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <com.startapp.android.publish.banner.Banner
+        android:id="@+id/startAppBanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
+        android:layout_centerHorizontal="true" />
 
     <ImageView
+        android:id="@+id/background_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/startAppBanner"
         android:layout_below="@+id/app_bar_aarti"
-        android:id="@+id/background_image"
-        android:layout_above="@+id/adView"
         android:alpha="0.3" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/startAppBanner"
         android:layout_below="@+id/app_bar_aarti"
-        android:layout_above="@+id/adView"
-        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
+            android:id="@+id/aarti"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:id="@+id/aarti" />
+            android:textSize="@dimen/full_aarti_text_size"
+            android:textStyle="bold" />
     </ScrollView>
 
 
